--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -105,7 +105,7 @@
                             <i class="fas fa-phone trapezoid-icon"></i>
                             <div class="trapezoid-text">
                                 <span>Call us</span>
-                                <span>9195019343</span>
+                                <span class="has-text-black">9195019343</span>
                             </div>
                         </div>
                     </div>
@@ -141,8 +141,8 @@
     <div class="container">
         <div class="columns is-centered">
             <div class="column is-half">
-                <h1 class="has-text-left has-text-black is-italic is-uppercase has-text-weight-bold">- Our Program</h1>
-                <h1 class="main-title is-size-1-desktop has-text-left has-text-black is-uppercase">Give shape of your body.</h1>
+                <h1 class="has-text-left main-title has-text-black is-italic is-uppercase is-size-5-desktop is-size-5-mobile">- Our Program</h1>
+                <h1 class="main-title is-size-1-desktop has-text-left program-text is-uppercase">Give shape of your body.</h1>
                 <p class="is-size-6-desktop has-text-black has-text-left mt-4 mb-4">Creating custom workout plans tailored to your unique needs. Whether you're looking to build muscle, lose weight, or simply lead a healthier lifestyle.</p>
                 <div class="buttons is-left mt-4">
                     <a href="" class="button is-outlined is-black">All Service</a>
@@ -211,9 +211,9 @@
                 </div>
                 <!--Traine Info-->
                 <div class="column is-half">
-                    <h1 class="main-title is-size-5-desktop is-uppercase is-italic has-text-primary">- trainer</h1>
+                    <h1 class="main-title is-size-5-desktop is-size-5-mobile is-uppercase is-italic has-text-primary">- trainer</h1>
                     <h1 class="main-title is-size-1-desktop has-text-white is-uppercase">Meet <span class="has-text-primary">Greg</span></h1>
-                    <h1 class="main-title is-size-6-desktop has-text-primary">Personal Trainer</h1>
+                    <h1 class="main-title is-size-6-desktop is-size-6-mobile has-text-primary">Personal Trainer</h1>
                     <p class="mt-6 is-size-6-desktop has-text-white">Greg is a certified strength and conditioning coach with over 10 years of experience in personal training and group fitness. He specializes in functional training, athletic development, and helping clients achieve their fitness goals safely and effectively.</p>
                 </div>
             </div>
@@ -229,7 +229,7 @@
             <!--Firt Row -->
             <div class="columns">
                 <div class="column is-half has-text-left">
-                    <h1 class="main-title has-text-primary is-size-5-desktop is-italic is-uppercase">- testimonials</h1>
+                    <h1 class="main-title has-text-primary is-size-5-desktop is-size-5-mobile is-italic is-uppercase">- testimonials</h1>
                     <h1 class="main-title is-size-1-desktop has-text-white is-uppercase">
                         what they say <span class="has-text-primary">
                             about us.
@@ -266,7 +266,7 @@
                                 <img src="{% static 'main/images/profile1.jpg' %}" alt="agenez queen" class="is-rounded">
                             </figure>
                             <div>
-                                <h1 class="main-title has-text-white is-size-4-desktop is-uppercase">agnex queen</h1>
+                                <h1 class="main-title has-text-white is-size-4-mobile is-size-4-desktop is-uppercase">agnex queen</h1>
                                 <p class="has-text-primary is-size-6-desktop">Designation</p>
                              </div>
                          </div>
@@ -294,7 +294,7 @@
                                 <img src="{% static 'main/images/profile2.jpg' %}" alt="agenez queen" class="is-rounded">
                             </figure>
                             <div>
-                                <h1 class="main-title has-text-white is-size-4-desktop is-uppercase">Brient adam</h1>
+                                <h1 class="main-title has-text-white is-size-4-mobile is-size-4-desktop is-uppercase">Brient adam</h1>
                                 <p class="has-text-primary is-size-6-desktop">Designation</p>
                              </div>
                          </div>
