--- a/main/static/main/css/styles.css
+++ b/main/static/main/css/styles.css
@@ -91,6 +91,7 @@
     left: 0rem;
     justify-content: center;
     align-items: center;
+    max-width: 600px;
 
   }
 
@@ -309,5 +310,11 @@
 
     .icon{
         font-size: 4em;
+    }
+
+    .highlight-box {
+        font-size: 2rem;
+        padding: 0.75rem;
+        max-width: 50%;
     }
   } 
